# veritas

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_api_keys.py  test_project.py
.clinerules/: SYSTEM_PROMPT.md
scripts/: __init__.py  test_project.py
src/: __init__.py  __main__.py
src/agents/: __init__.py  base.py  critic.py  factchecker.py  researcher.py  synthesizer.py  writer.py
src/api/: __init__.py  main.py
src/api/models/: __init__.py  request.py  response.py
src/api/routes/: __init__.py  research.py
src/config/: __init__.py  retry.py
src/domain/: __init__.py  events.py  interfaces.py
src/infrastructure/: __init__.py  circuit_breaker.py  llm.py  logging.py  tools.py
src/orchestration/: __init__.py  workflow.py
tests/integration/: test_agent_interactions.py  test_api_endpoints.py  test_workflow_configuration.py  test_workflow_end_to_end.py  test_workflow_error_handling.py  test_workflow_state.py
tests/unit/: test_api_models.py  test_api_routes_helpers.py  test_base_agent.py  test_circuit_breaker.py  test_config.py  test_critic_agent.py  test_domain_events.py  test_domain_interfaces.py  test_factchecker_agent.py  test_infrastructure_llm.py  test_infrastructure_logging.py  test_infrastructure_tools.py  test_researcher_agent.py  test_retry_config.py  test_synthesizer_agent.py  test_workflow.py  test_writer_agent.py
